--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-955.2KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-831.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇩🇪 德国-1.30MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-775.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇮🇹 意大利-624.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
   - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
