--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.30MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-775.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇮🇹 意大利-624.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.83MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-691.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-453.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-370.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-320.2KB/s(Youtube:不良林), server: hk01.wol1.ml, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: 81cafca0-18d7-4fec-ae38-6838c005510e}
+  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-775.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
