--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.83MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-691.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-453.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-959.8KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.70MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇭🇰 香港-320.2KB/s(Youtube:不良林), server: hk01.wol1.ml, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: 81cafca0-18d7-4fec-ae38-6838c005510e}
-  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
+  - {name: 🇯🇵 日本-380.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-326.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇩🇪 德国-1.58MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-909.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-320.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
