--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-420.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-1.19MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-959.8KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-1.23MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-451.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-341.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-380.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-326.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇩🇪 德国-1.58MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-702.2KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-938.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇫🇷 法国-909.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-420.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
